# todo-evaluation

./: .gitignore  AGENTS.md  CLAUDE.md  D:\Gemini_Cli\hackathon\hackathon_2\specs\002-todo-frontend\tasks.md  GEMINI.md  PHASE3_INTEGRATION_SUMMARY.md  QWEN.md  TASK_MANAGEMENT_TEST_RESULTS.md  main.py  test.db  test_results.md
.claude/: settings.local.json
Phase-III__Todo-AI-Chatbot/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  README.md  RUN_BACKEND.bat  alembic.ini  final_api_test.py  pyproject.toml  requirements.txt  test_all_apis.py  test_gemini.py  test_gemini_new.py  test_simple_apis.py
Phase-III__Todo-AI-Chatbot/backend/alembic/: env.py
Phase-III__Todo-AI-Chatbot/backend/src/: __init__.py  main.py
Phase-III__Todo-AI-Chatbot/backend/src/api/: auth.py  chat.py  health.py
Phase-III__Todo-AI-Chatbot/backend/src/core/: __init__.py  config.py  database.py  db_init.py  mcp.py  middleware.py  monitoring.py
Phase-III__Todo-AI-Chatbot/backend/src/domain/: error_handlers.py
Phase-III__Todo-AI-Chatbot/backend/src/integration/: __init__.py  llm_client.py  mcp_tools.py
Phase-III__Todo-AI-Chatbot/backend/src/models/: task.py
Phase-III__Todo-AI-Chatbot/backend/src/persistence/: __init__.py  base_model.py
Phase-III__Todo-AI-Chatbot/backend/src/routers/: auth.py  tasks.py
Phase-III__Todo-AI-Chatbot/backend/src/schemas/: auth.py
Phase-III__Todo-AI-Chatbot/backend/tests/: __init__.py  conftest.py
Phase-III__Todo-AI-Chatbot/backend/tests/integration/: agent_streaming_test.py  chat_api_test.py
specs/todo-cli/: plan.md  (+5 more)
(+397 files in other folders)
